[gd_scene load_steps=8 format=3 uid="uid://d3mp71v2tbwwq"]

[ext_resource type="Script" path="res://scenes/dialogs/tutorial_dialog/tutorial_dialog.gd" id="1"]

[sub_resource type="StyleBoxEmpty" id="6"]

[sub_resource type="Animation" id="7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/HBoxContainer/VBoxMedia/HBoxMediaAnchor:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer/HBoxContainer/VBoxMedia/HBoxMediaAnchor:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VBoxContainer/RichTextLabel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("VBoxContainer/RichTextLabel:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 69)]
}

[sub_resource type="Animation" id="8"]
resource_name = "fade_in"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/HBoxContainer/VBoxMedia/HBoxMediaAnchor:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(2, 2),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("VBoxContainer/HBoxContainer/VBoxMedia/HBoxMediaAnchor:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector2(0, 0), Vector2(16, 0)]
}

[sub_resource type="Animation" id="9"]
resource_name = "fade_in_next"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/HBoxContainer/VBoxMedia/HBoxMediaAnchor:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer/HBoxContainer/VBoxMedia/HBoxMediaAnchor:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector2(16, 0), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VBoxContainer/RichTextLabel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("VBoxContainer/RichTextLabel:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector2(16, 69), Vector2(0, 69)]
}

[sub_resource type="Animation" id="10"]
resource_name = "fade_out_next"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/HBoxContainer/VBoxMedia/HBoxMediaAnchor:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer/HBoxContainer/VBoxMedia/HBoxMediaAnchor:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector2(0, 0), Vector2(-16, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VBoxContainer/RichTextLabel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("VBoxContainer/RichTextLabel:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector2(0, 69), Vector2(-16, 69)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lmtx7"]
_data = {
"RESET": SubResource("7"),
"fade_in": SubResource("8"),
"fade_in_next": SubResource("9"),
"fade_out_next": SubResource("10")
}

[node name="TutorialDialog" type="PanelContainer"]
offset_right = 680.0
offset_bottom = 428.0
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_type_variation = &"LabelTitle"
text = "DIALOG_TUTORIAL_TITLE"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 1

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
mouse_filter = 1
bbcode_enabled = true
text = "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore. "
scroll_active = false

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_constants/separation = 20
theme_override_styles/separator = SubResource("6")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 30
alignment = 1

[node name="PreviousButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
focus_mode = 1
mouse_filter = 1
text = "<"

[node name="VBoxMedia" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="HBoxMediaAnchor" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxMedia"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="VBoxContainer/HBoxContainer/VBoxMedia/HBoxMediaAnchor"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 300)
layout_mode = 2
mouse_filter = 1
volume_db = -80.0
expand = true

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/VBoxMedia/HBoxMediaAnchor"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(500, 300)
layout_mode = 2
expand_mode = 1

[node name="NextButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
focus_mode = 1
mouse_filter = 1
text = ">"

[node name="PageLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
theme_type_variation = &"LabelSubtitle"
text = "1/x"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lmtx7")
}

[connection signal="meta_clicked" from="VBoxContainer/RichTextLabel" to="." method="_on_rich_text_label_meta_clicked"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/PreviousButton" to="." method="previous_panel"]
[connection signal="gui_input" from="VBoxContainer/HBoxContainer/VBoxMedia" to="." method="_on_v_box_media_gui_input"]
[connection signal="finished" from="VBoxContainer/HBoxContainer/VBoxMedia/HBoxMediaAnchor/VideoStreamPlayer" to="." method="_on_VideoPlayer_finished"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/NextButton" to="." method="next_panel"]
